@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/plugins.c: Fix broken error checking in plugin loading code.
+Arvid Norlander 2009-01-21
+
 common/readable.c: Fix a rare bug that caused the use of an uninitialised
   variable in god_info_msg() for gods denies summoning (such as valkyrie).
 Arvid Norlander 2009-01-21
